# word-book-api

./: .env  Cargo.toml  rustfmt.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000002_update_table.rs  m20220101_000003_profile_table.rs  m20220101_000004_update_table.rs  m20220101_000005_word_sheet_table.rs
src/: database.rs  main.rs  routes.rs
src/database/: article.rs  mod.rs  prelude.rs  profiles.rs  sheets.rs  sheets_words.rs  user.rs  users.rs  words.rs
src/routes/: article.rs  http_models.rs  login.rs  sheets.rs  users.rs  words.rs
