[package]
name = "word-book-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
migration = { path = "migration" }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors","trace"] }
serde = { version = "1.0.219", features = ["derive"] }
uuid = {version = "1.17.0", features = ["v4", "serde"]}
reqwest = { version = "0.12.22", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde", "clock"] }
sea-orm = { version = "1.1.14", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
validator = { version = "0.20.0", features = ["derive"] }

axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"]}
argon2 = "0.5.3"
serde_json = "1.0.142"
anyhow = "1.0.98"
jsonwebtoken = "9.3.1"
dotenvy = "0.15.7"
time = "0.3.20"
tracing-subscriber = "0.3.19"
lettre = "0.11.18"

